--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,11 @@ body {
   z-index: 100;
 }
 
+.introduction {
+  width: 1550px;
+  height: 100vh;
+}
+
 .service {
   /* width: 150vw; */
   width: 2570px;
@@ -702,14 +707,6 @@ header {
   }
 }
 
-/* .top_scroll::after {
-  content: "";
-  width: 200px;
-  height: 3px;
-  background-color: #c67039;
-  margin-left: 35px;
-} */
-
 .sp_top_scroll {
   display: none;
 }
@@ -786,6 +783,162 @@ header {
   transition-delay: 0.5s; /* フェード開始を0.5秒遅らせる */
 }
 
+#introduction_contents {
+  position: relative;
+  height: 100%;
+  display: flex;
+}
+
+.introduction_img {
+  margin-left: 102px;
+  height: 100%;
+}
+
+.introduction_img img {
+  height: 100%;
+}
+
+.introduction_img01 {
+  position: absolute;
+  top: 237px;
+  left: 500px;
+  mix-blend-mode: multiply;
+}
+
+.pc_introduction-text {
+  position: relative;
+}
+
+.pc_main-text {
+  position: absolute;
+  top: 100px;
+  left: -280px;
+  font-size: 30px;
+  line-height: 2;
+  color: #56402b;
+  white-space: nowrap;
+  font-family: "HiraMinProN-W6";
+  font-feature-settings: initial;
+}
+
+.pc_sub-text {
+  position: absolute;
+  top: 252px;
+  left: -104px;
+  font-size: 18px;
+  line-height: 2;
+  color: #56402b;
+  white-space: nowrap;
+  font-family: "HiraMinProN-W6";
+  font-feature-settings: initial;
+}
+
+.pc_introduction_img02 {
+  mix-blend-mode: multiply;
+  margin-top: 68px;
+  margin-left: 50px;
+}
+
+#introduction_contents .pc_portfolio_menu {
+  position: absolute;
+  top: 0;
+  left: 100px;
+}
+
+#introduction_contents .sp_portfolio_menu,
+.sp_introduction-text {
+  display: none;
+}
+@media screen and (max-width: 1100px) {
+  #introduction_contents .pc_portfolio_menu,
+  .pc_introduction-text,
+  .pc_introduction_img02 {
+    display: none;
+  }
+
+  #introduction_contents .sp_portfolio_menu {
+    position: static;
+    display: flex;
+    flex-direction: column;
+    transform: none;
+    margin-bottom: 40px;
+  }
+
+  #introduction_contents {
+    flex-direction: column;
+  }
+
+  .introduction_img {
+    display: none;
+  }
+
+  .introduction_img01 {
+    position: static;
+    display: flex;
+    justify-content: center;
+    margin-top: 20%;
+    margin-bottom: 52px;
+  }
+
+  #introduction_contents .sp_portfolio_menu .menu_title {
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 6%;
+  }
+
+  #introduction_contents .sp_portfolio_menu .menu_title::before {
+    margin-right: 0;
+    display: inline-block;
+  }
+
+  #introduction_contents .sp_portfolio_menu .menu_subtitle {
+    margin-left: 0;
+    font-size: 5.3vw;
+    text-align: center;
+  }
+
+  .sp_introduction-text {
+    display: block;
+    margin: 0 auto;
+  }
+
+  .sp_introduction-text_box {
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+  }
+
+  .sp_main-text {
+    font-size: 5.3vw;
+    line-height: 1.8;
+    color: #56402b;
+    white-space: nowrap;
+    font-family: "HiraMinProN-W6";
+    font-feature-settings: initial;
+    margin-bottom: 40px;
+    display: inline-block;
+  }
+
+  .sp_sub-text {
+    font-size: 4vw;
+    line-height: 1.8;
+    color: #56402b;
+    white-space: nowrap;
+    font-family: "HiraMinProN-W6";
+    font-feature-settings: initial;
+  }
+
+  .sp_introduction-img02 {
+    position: static;
+    margin: 0;
+    mix-blend-mode: multiply;
+  }
+
+  .sp_introduction-img02 img {
+    width: 30vw;
+  }
+}
+
 #service_contents {
   position: relative;
   height: 100%;
@@ -830,7 +983,7 @@ header {
 }
 
 #service_contents .portfolio_menu {
-  margin-left: 17%;
+  margin-left: 10%;
   z-index: 200;
 }
 
