--- a/css/style.css
+++ b/css/style.css
@@ -824,9 +824,8 @@ header {
   line-height: 2;
   color: #56402b;
   white-space: nowrap;
-  font-family: "HiraMinProN-W6", "游明朝", YuMincho, "Hiragino Mincho ProN W3",
-    "ヒラギノ明朝 ProN W3", "Hiragino Mincho ProN", "HG明朝E", "ＭＳ Ｐ明朝",
-    "ＭＳ 明朝", serif;
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
 }
 
