--- a/css/style.css
+++ b/css/style.css
@@ -837,7 +837,8 @@ header {
   line-height: 2;
   color: #56402b;
   white-space: nowrap;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
 }
 
@@ -931,7 +932,8 @@ header {
     line-height: 1.8;
     color: #56402b;
     white-space: nowrap;
-    font-family: "HiraMinProN-W6";
+    font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+      "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     font-feature-settings: initial;
     margin-bottom: 40px;
     display: inline-block;
@@ -942,7 +944,8 @@ header {
     line-height: 1.8;
     color: #56402b;
     white-space: nowrap;
-    font-family: "HiraMinProN-W6";
+    font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+      "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     font-feature-settings: initial;
   }
 
@@ -1032,7 +1035,8 @@ header {
 .menu_title {
   margin: 140px 0 40px;
   font-size: 50px;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   padding-left: 20px;
   display: flex;
@@ -1051,7 +1055,8 @@ header {
 .menu_subtitle {
   margin-left: 100px;
   font-size: 25px;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   padding-left: 35px;
   white-space: nowrap;
@@ -1102,7 +1107,8 @@ header {
 .card_wrapper {
   align-content: center;
   width: 368px;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   /* margin-left: 4%; */
 }
@@ -1127,7 +1133,8 @@ header {
 .card-text {
   text-align: center;
   font-size: 18px;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   /* font-feature-settings: initial; */
   line-height: 2;
   color: #56402b;
@@ -1202,7 +1209,8 @@ header {
   .sp_portfolio_menu .menu_title {
     margin: 20% 0 40px;
     font-size: 6.3vw;
-    font-family: "HiraMinProN-W6";
+    font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+      "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     font-feature-settings: initial;
     padding-left: 20px;
     display: flex;
@@ -1768,7 +1776,8 @@ header {
 .name {
   display: flex;
   align-items: flex-end;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   margin-bottom: 65px;
   white-space: nowrap;
@@ -1786,7 +1795,8 @@ header {
 .profile_text {
   font-size: 14px;
   line-height: 1.78;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
 }
 
@@ -1976,7 +1986,8 @@ header {
 .contact_portfolio_menu .menu_text {
   font-size: 16px;
   color: #56402b;
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   line-height: 2.25;
   margin-left: 28%;
@@ -1985,7 +1996,8 @@ header {
 }
 
 .customer-info {
-  font-family: "HiraMinProN-W6";
+  font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+    "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
   font-feature-settings: initial;
   font-size: 16px;
   color: #56402b;
@@ -2087,7 +2099,8 @@ header {
   .contact_portfolio_menu .sp_menu_text {
     display: block;
     margin-left: 0;
-    font-family: "HiraMinProN-W6";
+    font-family: "ヒラギノ明朝 ProN W6", "HiraMinProN-W6", "HG明朝E",
+      "ＭＳ Ｐ明朝", "MS PMincho", "MS 明朝", serif;
     /* font-feature-settings: initial; */
     font-size: 2.7vw;
     width: 60%;
